--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "toolsdl.h": "c"
+        "stdio.h": "c",
+        "stdbool.h": "c",
+        "ios": "c",
+        "map.h": "c",
+        "map_maker.h": "c"
     }
 }
